--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -10,7 +10,7 @@ jobs:
             - name: Step one
               uses: actions/checkout@v3
             - name: Step two
-              run: env | sort
+              run: date
     job2:
         name: Second Job
         runs-on: windows-latest
@@ -18,4 +18,20 @@ jobs:
             - name: Step one
               uses: actions/checkout@v3
             - name: Step two
-              run: "Get-ChildItem Env: | Sort-Object Name"
+              run: date
+    job3:
+        name: Third job
+        runs-on: macos-latest
+        steps:
+            - name: Step one
+              uses: actions/checkout@v3
+            - name: Step two
+              run: date
+    job4:
+        name: Third job
+        runs-on: ubuntu-24.04
+        steps:
+            - name: Step one
+              uses: actions/checkout@v3
+            - name: Step two
+              run: date
