--- a/.github/workflows/02_build-tomcat.yml
+++ b/.github/workflows/02_build-tomcat.yml
@@ -3,45 +3,56 @@ name: Build Tomcat
 on:
   push:
     paths:
-      - '02_build_tomcat/**'
+      - "02_build_tomcat/**"
+  pull_request:
+    paths:
+      - "02_build_tomcat/**"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out tomcat-users.xml
-      uses: actions/checkout@v2
+      - name: Check out tomcat-users.xml
+        uses: actions/checkout@v2
 
-    - name: List project files and java version
-      run: |
+      - name: List project files and java version
+        run: |
           ls -ltr
           java -version
 
-    - name: Check out Apache Tomcat
-      uses: actions/checkout@v2
-      with:
-        repository: apache/tomcat # Repository name with owner
-        ref: master               # The branch, tag or SHA to checkout
-        path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
+      - name: Check out Apache Tomcat
+        uses: actions/checkout@v2
+        with:
+          repository: apache/tomcat
+          ref: master
+          path: ./tomcat
+          fetch-depth: 1
 
-    - name: Setup Java 9
-      uses: actions/setup-java@v1
-      with:
-        java-version: '9.0.4'     # The JDK version to make available on the path
-        java-package: jdk         # (jre, jdk, or jdk+fx) - defaults to jdk
-        architecture: x64         # (x64 or x86) - defaults to x64
+      - name: Checkout code
+        run: git -c protocol.version=2 fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin +refs/heads/master*:refs/remotes/origin/master* +refs/tags/master*:refs/tags/master*
+        id: checkout
+        continue-on-error: true
 
-    - name: List project files and java version
-      run: |
+  install:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Java 9
+        uses: actions/setup-java@v1
+        with:
+          java-version: "9.0.4" # The JDK version to make available on the path
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
+
+      - name: List project files and java version
+        run: |
           ls -ltr
           java -version
 
-    - name: Copy tomcat-users.xml into Tomcat configuration directory
-      run: cp -v tomcat-users.xml ./tomcat/conf/tomcat-users.xml
+      - name: Copy tomcat-users.xml into Tomcat configuration directory
+        run: cp -v tomcat-users.xml ./tomcat/conf/tomcat-users.xml
 
-    - name: Compile Tomcat
-      run: |
-        cd ./tomcat
-        ant
+      - name: Compile Tomcat
+        run: |
+          cd ./tomcat
+          ant
