--- a/.github/workflows/02_build-tomcat.yml
+++ b/.github/workflows/02_build-tomcat.yml
@@ -4,6 +4,9 @@ on:
   push:
     paths:
       - '02_build_tomcat/**'
+  pull_request: 
+    paths:
+      - '02_build_tomcat/**'
 
 jobs:
   build:
@@ -22,9 +25,15 @@ jobs:
     - name: Check out Apache Tomcat
       uses: actions/checkout@v2
       with:
-        repository: apache/tomcat # Repository name with owner
-        ref: master               # The branch, tag or SHA to checkout
-        path: ./tomcat            # Relative path under $GITHUB_WORKSPACE
+        repository: apache/tomcat
+        ref: master
+        path: ./tomcat
+        fetch-depth: 1
+    
+    - name: Checkout code
+      run: git -c protocol.version=2 fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin +refs/heads/master*:refs/remotes/origin/master* +refs/tags/master*:refs/tags/master*
+      id: checkout
+      continue-on-error: true
 
     - name: Setup Java 9
       uses: actions/setup-java@v1
