--- a/.github/workflows/02_build-tomcat.yml
+++ b/.github/workflows/02_build-tomcat.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: apache/tomcat
-          ref: master
+          ref: main
           path: ./tomcat
           fetch-depth: 1
 
@@ -42,7 +42,7 @@ jobs:
           java -version
 
       - name: Copy tomcat-users.xml into Tomcat configuration directory
-        run: cp -v tomcat-users.xml ./tomcat/conf/tomcat-users.xml
+        run: cp -v 02_build_tomcat/tomcat-users.xml ./tomcat/conf/tomcat-users.xml
 
       - name: Compile Tomcat
         run: |
