--- a/.github/workflows/02_build-tomcat.yml
+++ b/.github/workflows/02_build-tomcat.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: apache/tomcat
-          ref: master
+          ref: main
           path: ./tomcat
           fetch-depth: 1
 
