--- a/.github/workflows/04_artifact.yml
+++ b/.github/workflows/04_artifact.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
 
     - name: Check out code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
     - name: Build ${{ env.FILE_NAME }} for ubuntu-latest
       run: go build ${{ env.FILE_NAME }}.go
@@ -26,14 +26,15 @@ jobs:
     - name: Build ${{ env.FILE_NAME }} for windows-latest
       run: GOOS=windows GOARCH=amd64 go build ${{ env.FILE_NAME }}.go
       
-    - name: Upload artifact for linux
-      uses: actions/upload-artifact@v1.0.0
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.4.3
       with:
         name: linux
         path: ./${{ env.FILE_NAME }}
 
-    - name: Upload artifact for windows
-      uses: actions/upload-artifact@v1.0.0
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.4.3
+    
       with:
         name: windows
         path: ./${{ env.FILE_NAME }}.exe
@@ -45,10 +46,10 @@ jobs:
     steps:
 
     - name: Check out code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
     - name: Download artifact
-      uses: actions/download-artifact@v1.0.0
+      uses: actions/download-artifact@v4.1.8
       with:
         name: linux
 
@@ -65,7 +66,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Download artifact
-      uses: actions/download-artifact@v1.0.0
+      uses: actions/download-artifact@v4.1.8
       with:
         name: windows
         
