--- a/.github/workflows/04_artifact.yml
+++ b/.github/workflows/04_artifact.yml
@@ -54,7 +54,7 @@ jobs:
         name: linux
 
     - name: Test ${{ env.FILE_NAME }}
-      run: source ./04-artifacts/test.sh
+      run: source ./04_artifacts/test.sh
 
   test-windows:
     name: Test Windows
