Modified artifacts workflow file again 7

--- a/.github/workflows/04_artifact.yml
+++ b/.github/workflows/04_artifact.yml
@@ -71,4 +71,4 @@ jobs:
         name: windows
         
     - name: Test ${{ env.FILE_NAME }}
-      run: 04_artifacts/hello-server.exe
+      run: hello-server.exe
