Modified artifacts workflow file again 7

--- a/.github/workflows/04_artifact.yml
+++ b/.github/workflows/04_artifact.yml
@@ -71,4 +71,6 @@ jobs:
         name: windows
         
     - name: Test ${{ env.FILE_NAME }}
-      run: hello-server.exe
+      run: |
+        ls
+        hello-server.exe
