--- a/.github/workflows/05_pipeline.yml
+++ b/.github/workflows/05_pipeline.yml
@@ -13,9 +13,9 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v1
-      - name: Setup Python environment
-        uses: actions/setup-python@v1.1.1
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5.3.0
       - name: Install requirements
         run: pip install --quiet --requirement ./05_pipeline/requirements.txt
       - name: Lint code
