--- a/.github/workflows/05_pipeline.yml
+++ b/.github/workflows/05_pipeline.yml
@@ -26,3 +26,21 @@ jobs:
         run: |
           cd 05_pipeline/
           python -m unittest --verbose --failfast
+
+  build_image:
+    needs: [lint]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up GCloud
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6.10.0
+        with:
+          context: ./05_pipeline/
+          push: true
+          tags: python-test:gitactions-v0.1
