--- a/.github/workflows/05_pipeline.yml
+++ b/.github/workflows/05_pipeline.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - name: Set up GCloud
+      - name: Set up Docker login
         uses: docker/login-action@v3.3.0
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
@@ -44,3 +44,16 @@ jobs:
           context: ./05_pipeline/
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.APPLICATION_NAME }}:latest
+
+  test_image:
+    needs: [build_image]
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Docker login
+        uses: docker/login-action@v3.3.0
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Run unit tests in container
+        run: docker run "${{ vars.DOCKERHUB_USERNAME }}/${{ vars.APPLICATION_NAME }}:latest" -m unittest --verbose --failfast
