--- a/.github/workflows/04_artifact.yml
+++ b/.github/workflows/04_artifact.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Test ${{ env.FILE_NAME }}
       run: |
         ls
+        chmod +x hello-server
         ./hello-server
 
   test-windows:
